Visual fixes, layout now covers almost full screen, makes footer stuck in the bottom. CV padding fixes and rounded corners for language list.

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,6 +1,6 @@
 html {
     position: relative;
-    min-height: 100%;
+    height: 100vh;
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
@@ -8,13 +8,15 @@ html {
 }
 
 body {
-    margin-bottom: 60px;
+    min-height: 100vh;
+    margin-bottom: 40px;
     background: #040b14;
     font-family: 'Helvetica', 'Arial', sans-serif;
     color: white;
 }
 
 .layout-container {
+    min-height: 95vh;
     display: flex;
     flex: 1;
     padding-left: 300px; /* kompensera för fixed sidomeny */
